[package]
name = "smoothed_z_score"
description = "Smoothed z-score algo (very robust thresholding algorithm)"
keywords = [ "signal", "timeseries", "z-score", "dispersion", "peak-detection" ]
homepage = "https://github.com/swizard0/smoothed_z_score"
repository = "https://github.com/swizard0/smoothed_z_score"
readme = "README.md"
version = "0.1.3"
authors = ["Jean-Paul", "Alexey Voznyuk <me@swizard.info>"]
license = "MIT"

[dependencies]
